// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row> hook:styler 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> when {alignContent} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "center",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> when {alignItems} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> when {justifyContent} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;
